refactor: move post-processing to asciidoc lifecycle
Signed-off-by: Lewis Birks <22620804+lewisbirks@users.noreply.github.com>